--- a/SanteConnect/package.json
+++ b/SanteConnect/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "capstone",
+  "name": "sante-connect-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,10 +10,6 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "mongodb": "^4.8.0",
-    "mongoose": "^6.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
@@ -43,5 +39,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "main": "server.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
