--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongoose": "^6.4.5"
+    "mongoose": "^6.4.5",
+    "sass": "^1.53.0"
   },
   "type": "module"
 }
