--- a/SanteConnect/package.json
+++ b/SanteConnect/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "classnames": "^2.3.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
